the first assignment

--- a/site/index.html
+++ b/site/index.html
@@ -3,9 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
   <title>Hello Coursera!</title>
 </head>
 <body>
-  <h1>Hello Coursera! it's an intereesting course</h1>
+  <h1>Hello Coursera! it's an interesting course</h1>
+  <div class="chicken">Chicken
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam dolore officiis necessitatibus ex aspernatur inventore tenetur eveniet rerum quas perferendis neque, corporis vel pariatur unde, doloremque exercitationem minima! In, et?</p>
+  </div>
+<div class="beef">
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci asperiores voluptatem tempore perspiciatis maiores ratione aliquid libero ipsum voluptate sapiente! Culpa quo assumenda, accusantium ab corporis hic necessitatibus quae dolorum.</p>
+</div>
+<div class="sushi">Sushi
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dicta ullam eum nulla nam provident voluptate minima ad inventore officia ipsum unde vero architecto at sequi, tempora veritatis odit dolore.</p></div>
 </body>
 </html>
