--- a/site/index.html
+++ b/site/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!Doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,14 +7,20 @@
   <title>Hello Coursera!</title>
 </head>
 <body>
-  <h1>Hello Coursera! it's an interesting course</h1>
-  <div class="chicken">Chicken
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam dolore officiis necessitatibus ex aspernatur inventore tenetur eveniet rerum quas perferendis neque, corporis vel pariatur unde, doloremque exercitationem minima! In, et?</p>
-  </div>
-<div class="beef">
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci asperiores voluptatem tempore perspiciatis maiores ratione aliquid libero ipsum voluptate sapiente! Culpa quo assumenda, accusantium ab corporis hic necessitatibus quae dolorum.</p>
+  <h1>Our Menu</h1>
+  <div class="menu">
+   <div>
+    
+    <p id="p1"> <span id="span1">Chicken</span> <span id="span">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam dolore officiis necessitatibus ex aspernatur inventore tenetur eveniet rerum quas perferendis neque, corporis vel pariatur unde, doloremque exercitationem minima! In, et?</span></p>
+   </div> 
+    <div>
+      
+
+  <p id="p2"> <span id="span2">Beef</span> <span id="span">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci asperiores voluptatem tempore perspiciatis maiores ratione aliquid libero ipsum voluptate sapiente! Culpa quo assumenda, accusantium ab corporis hic necessitatibus quae dolorum.</span></p>
+
+    </div>
+   <div>
+    <p id="p3"> <span id="span3">Sushi</span> <span id="span">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dicta ullam eum nulla nam provident voluptate minima ad inventore officia ipsum unde vero architecto at sequi, tempora veritatis odit dolore.</span></p></div>
 </div>
-<div class="sushi">Sushi
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dicta ullam eum nulla nam provident voluptate minima ad inventore officia ipsum unde vero architecto at sequi, tempora veritatis odit dolore.</p></div>
 </body>
-</html>
+</html>//
